--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 .nav-bar{
+    position: sticky;
+    top: 0;
     color: #f1f1f1;
     display: flex;
-    justify-content:space-between;
-    background-color: darkslategrey;
+    justify-content:right;
+    background-color: rgb(226, 230, 230);
 }
 ul{
-    display: flex;
+    display:flex;
     justify-content: space-around;
     list-style-type: none;
 }
@@ -22,6 +24,7 @@ li{
     display:flex;
     padding-right: 30px;
     align-items: center;
+    
 }
 li:hover{
     color: #3e8e41;
@@ -73,16 +76,22 @@ li:hover{
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content a:hover {background-color: #ddd; transition: all 300ms ease; margin-left: 8px;}
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropbtn:hover{
+    background-color: #3e8e41;
+    transition: al 300ms ease;
+  }
 
-  /* section-1-page */
+  /* section-1 home-page */
   .home-page{
+     
+      height: 30vh;
       padding-top: 45px;
       padding-left: 155px;
       
@@ -105,10 +114,16 @@ li:hover{
       margin: 35px;
       width: 200px;  
       height: 200px;
-      border:  1px;
+      border: none ;
       box-shadow:  5px 5px 15px grey;
       /* text-align: center; */
+      transition: all 300ms ease;
+  }
+  .home-page .div1:hover{
+      box-shadow: none;
+      background-color: lightgrey;
   }
   .a{
       padding-left: 50px;
+      
   }
