--- a/style.css
+++ b/style.css
@@ -88,8 +88,34 @@ li:hover{
     transition: al 300ms ease;
   }
 
-  /* section-1 home-page */
-  .home-page{
+  /* section-1 home-page and side menu */
+  .menu-icon{
+
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  border: none;
+  box-shadow: 5px 5px 15px grey;
+  border-radius: 15px;
+  }
+
+
+#sidemenu{
+      display: none;
+      flex-direction: column;
+      position: relative;
+      top: 85px;
+      left: -155px;
+      padding-top: 5px;
+      text-align: center;
+      width: 150px;
+      height: 150px;
+      border: none ;
+      box-shadow:  5px 5px 15px grey;
+      transition: all 0.6s ease ;
+  }
+
+.home-page{
      
       height: 30vh;
       padding-top: 45px;
@@ -117,8 +143,9 @@ li:hover{
       border: none ;
       box-shadow:  5px 5px 15px grey;
       /* text-align: center; */
-      transition: all 300ms ease;
+      transition: all 0.6s ease;
   }
+  /* change box appearnce and shadows when hovering */
   .home-page .div1:hover{
       box-shadow: none;
       background-color: lightgrey;
